@@ -6,7 +6,7 @@ for %%i in (*) do set LIB_JARS=!LIB_JARS!;..\lib\%%i
 cd ..\bin
 
 
-java -Xms64m -Xmx1024m -XX:MaxPermSize=64M -classpath ..\conf;%LIB_JARS% com.fanxer.aso.common.container.Main
+java -Xms64m -Xmx1024m -classpath ..\conf;%LIB_JARS% com.liubaing.galaxy.core.container.Main
 goto end
 
 :end
